<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/context_menu"-->
        <!--android:title="@string/context_menu"-->
        <!--android:icon="@drawable/btn_add"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="always" />-->

    <item android:id="@+id/action_edit"
          android:title="@string/action_edit"
          android:orderInCategory="80"
          android:icon="@drawable/icn_2"
          app:showAsAction="never" />

    <item android:id="@+id/action_file"
          android:title="@string/action_file"
          android:orderInCategory="90"
          app:showAsAction="never"/>
    <item android:id="@+id/action_save"
          android:title="@string/action_save"
          android:orderInCategory="100"
          android:icon="@drawable/icn_1"
          app:showAsAction="never" />
    <item android:id="@+id/action_json"
          android:title="@string/action_json"
          android:orderInCategory="110"
          app:showAsAction="never"/>
    <item android:id="@+id/action_pre"
          android:title="@string/action_pre"
          android:orderInCategory="120"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="130"
          app:showAsAction="never"/>
</menu>
